--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,24 +1,22 @@
 name: Calculator CI/CD Pipeline
 
-# Trigger the workflow on push or pull request to main branch
 on:
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
 
-# Jobs to run
 jobs:
   test:
-    name: Test Calculator
+    name: Test Calculator and Run Code Quality Checks
     runs-on: ubuntu-latest
 
     steps:
-    # Step 1: Check out the repository code
+    # Step 1: Checkout code
     - name: Checkout code
       uses: actions/checkout@v4
 
-    # Step 2: Set up Python environment
+    # Step 2: Set up Python 3.11
     - name: Set up Python 3.11
       uses: actions/setup-python@v4
       with:
@@ -33,27 +31,51 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        pip install black flake8 mypy pytest-cov
 
-    # Step 5: Run the calculator to verify it works
+    # ------------------------------
+    # 🔍 Code Quality Checks Section
+    # ------------------------------
+
+    - name: Run Black (code formatting check)
+      run: |
+        echo "🖤 Running Black..."
+        black --check .
+    
+    - name: Run Flake8 (linting)
+      run: |
+        echo "🔎 Running Flake8..."
+        flake8 .
+
+    - name: Run mypy (type checking)
+      run: |
+        echo "🧪 Running mypy..."
+        mypy .
+    
+    # ------------------------------
+    # 🧪 Run your Calculator Logic & Tests
+    # ------------------------------
+
+    # Step 5: Run demo
     - name: Run calculator demo
       run: |
         echo "Running calculator demonstration..."
         python main.py
 
-    # Step 6: Run all tests with pytest
+    # Step 6: Run pytest
     - name: Run calculator tests
       run: |
         echo "Running calculator test suite..."
         pytest test_main.py -v --tb=short
 
-    # Step 7: Run tests with coverage report
+    # Step 7: Generate coverage report
     - name: Generate coverage report
       run: |
-        pip install pytest-cov
         pytest test_main.py --cov=main --cov-report=term-missing
 
     # Step 8: Success message
     - name: All tests passed
       run: |
         echo "✅ All calculator tests passed!"
-        echo "✅ CI/CD Pipeline completed successfully!"
+        echo "✅ Code Quality Checks Completed!"
+        echo "🚀 CI/CD Pipeline completed successfully!"
